apps/goatlint/src/snapshots/_-W correctness -A no-debugger fixtures__cli__linter__debugger.js@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: -W correctness -A no-debugger fixtures/cli/linter/debugger.js
working directory: 
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 1 file with 92 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
